src/snapshots/ruff__linter__tests__F401_F401_1.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  """Access a sub-importation via an alias."""
  import pyarrow as pa
  import pyarrow.csv
  
  print(pa.csv.read_csv("test.csv"))

