src/snapshots/ruff__linter__tests__F401_F401_3.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  """Test: referencing an import via TypeAlias (with future annotations)."""
  from __future__ import annotations
  
  import sys
  
  import numpy as np
  
  if sys.version_info >= (3, 10):
      from typing import TypeAlias
  else:
      from typing_extensions import TypeAlias
  
  
  CustomInt: TypeAlias = np.int8 | np.int16

