src/snapshots/ruff__linter__tests__F401_F401_6.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnusedImport:
      - - background.BackgroundTasks
      - false
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 39
  fix:
    patch:
      content: ""
      location:
        row: 7
        column: 0
      end_location:
        row: 8
        column: 0
    applied: false
- kind:
    UnusedImport:
      - - datastructures.UploadFile
      - false
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 52
  fix:
    patch:
      content: ""
      location:
        row: 10
        column: 0
      end_location:
        row: 11
        column: 0
    applied: false

