src/snapshots/ruff__linter__tests__F403_F403.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ImportStarUsed: F634
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 18
  fix: ~
- kind:
    ImportStarUsed: F634
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 18
  fix: ~

